# ucb-mscs-courses

./: .envrc.example  .gitignore  Cargo.toml  buf.gen.yaml  buf.yaml  flake.nix  pre-commit.nix  rust-toolchain.toml  treefmt.nix
common/core/: Cargo.toml
common/core/src/: config.rs  debug.rs  lib.rs  sentry.rs  signal.rs  tracing.rs
common/core/src/health/: common.rs  grpc.rs  mod.rs
nix/: lib.nix  overlays.nix  rust.nix
proto/: flake-module.nix
proto/course/v1/: course.proto  course_status.proto  courses_grpc.proto
services/: flake-module.nix
services/api/: Cargo.toml  Containerfile  flake-module.nix
services/api/src/: main.rs
services/api/src/api/: courses.rs
services/importer/: Cargo.toml  Containerfile  flake-module.nix
services/importer/src/: config.rs  main.rs
